# Election-Management

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  filetypes.xml  github.xml  main.c  material_theme.xml  vcs.xml  webServers.xml
Submission/: Makefile  election.c  election.h  makefile  voteMap.c  voteMap.h
Submission/mtm_map/: map.c
Submission/tests/: electionTestsExample.c
Submission/utils/: Utilities_For_Testing.h
_windows/: cpp.toolchains.xml
colors/: _@user_Darcula.icls
dryPart/: dry.c  dry.h  dryMain.c  findErrors.c
elections/: electionTestsExample.c
ex1_from_server/: election.h
ex1_from_server/mtm_map/: map.c  map.h
playground/: playground.c
wetPart/elections/: election.h  electionTestsExample.c  elections.c  print_utils.h  voteMap.c  voteMap.h
wetPart/elections/mtm_map/: map.c
wetPart/map/: map  map.c  map.h  map_example_test.c  test_file.c
